# whisper-transcribe

./: LICENSE  README.md  package.json
.github/workflows/: main.yml
src/: App.css  App.tsx  constants.ts  styles.css
src-tauri/: Cargo.toml  tauri.conf.json
src-tauri/icons/: icon.icns
src-tauri/src/: api.rs  command.rs  config.rs  main.rs
src/components/: ConfigForm.css  ConfigForm.tsx  Input.css  Input.tsx  LabeledItem.css  LabeledItem.tsx  TextArea.css  TextArea.tsx
